--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-torch==2.1.2
-transformers==4.30.2
-nltk==3.8.1
-spacy==3.5.3
-scikit-learn==1.2.2
-pandas==2.0.2
-regex==2023.6.3
+torch
+transformers
+nltk
+spacy
+scikit-learn
+pandas
+regex
 numpy
 pillow
-streamlit==1.32.0  # Using a specific version known to work with Python 3.9
-huggingface-hub>=0.16.4 
+streamlit
+huggingface-hub
